@@ -7,8 +7,8 @@
       <div class="jumbotron http-error">
         <h1>Prusa Link</h1>
         <p></p>
-        <p>For uploading gcodes from the Prusa Slicer use this Api-Key:</p>
-        <code>{{ api_key }}</code>
+        <p>For uploading gcodes from the Prusa Slicer use this Api-Key:
+          <code>{{ api_key }}</code>
         </p>
       </div>
     </div>
