@@ -43,9 +43,6 @@
               </div>
             </div>
 
-            <p><i>We detected {{ wizard.daemon.prusa_link.printer.type }} printer on
-            {{ wizard.daemon.cfg.printer.port }}.</i></p>
-
             <div class="container navigation">
               <div class="row">
                   <div class="col">
@@ -57,8 +54,6 @@
               </div>
             </div>
           </form>
-
-          
 
         </div>{# /col-md-9 so end of content  #}
       </div>{# /row #}
