@@ -5,8 +5,10 @@
     * JOB_INFO fix
     * Service must be start using daemon script prusa-link
     * Implicit config path is /etc/Prusa-Link/prusa-link.ini
+    * Implicit settings path is {HOME}/prusa_printer_settings.ini
     * Wizard - part II
     * Api-Key in INFO event
+    * Wizard redesign
 
 
 0.1.3 (2020-12-01)
